
ChangeLog
 [ + added, - removed, * changed ]
 * 07May2013 Multiple small fixes in the bursty tracing
               Avoided problems when Extrae_shutdown was called
               Emission of MPI others statistics
               MPI communicators minor refactoring
             Removed erroneous emission of hardware counters when a set is
               about to start
             Added installation of extrae_module.f
             OpenMP snippets were misused in DynInst, use the appropriate
             Add cross-compiled librt for ARM architectures if available
 + 02May2013 Added support for CUDA5+CUPTI
             Changed substitute script to use sed -i
 + 30Apr2013 Added support for cudaDeviceReset.
             Honor --with-cuda instead of adding /opt/cuda/4.0 in Makefile
             Look for specific intel mpi libs
 * 29Apr2013 Do not require -e to import symbols
             Added 'random' starting-set-distribution for performance counter
             sets
 + 11Apr2013 Instrumented pthread_barrier_wait
 + 20Mar2013 Added example for Python instrumentation 
 * 20Mar2013 Fixed paths in pyextrae.py
 + 20Mar2013 Added pyextrae.py module in src/others to instrument python programs
 * 15Mar2013 Added Fortran module with Extrae constant and function
                declarations
 * 12Mar2013 Modified SVN propset using
              svn propset svn:keywords "Date Revision Author HeadURL Id"
 * 12Mar2013 Code restructuring.
 * 11Mar2013 Changed the automatic generation of topologies for small online executions
 * 11Mar2013 Fixed Makefiles to distribute some missing files
 * 08Mar2013 Fixed minor compilation issues.
 * 08Mar2013 Extrae version 3.0rc1
 * 08Mar2013 Fixed compilation issues (made on-line support only available to the MPI tracing libraries).
             Fixed XML parse to skip comments.
             Hardware counters are no longer a requirement for the on-line spectral analysis.
             Enable sampling by default